--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ build-backend = "pdm.backend"
 [tool.pdm]
 distribution = true
 
+[tool.pdm.build]
+package-dir = "src"
+
 [tool.pdm.dev-dependencies]
 dev = [
     "pre-commit>=3.6.2",
